css/style.css
body {
  background-image: url("../images/backgroundImage.jpeg");
}

h1 {
  text-align: center;
  font-size: 60px;
  color: lime;
  font-family: "Shrikhand", cursive;
  margin: 0;
  padding: 0;
  border: 0;
  animation: spin 3.5s linear infinite 1s;
  text-shadow: 6px 6px rgb(255, 0, 0);
}

@media screen and (min-width: 650px) {
  h1 {
    font-size: 100px;
  }
}

h2 {
  text-align: center;
  height: 120px;
  width: 90%;
  font-size: 24px;
  margin: 0 auto;
  background-color: rgb(45, 233, 189);
  color: magenta;
  border: 6px solid red;
  border-radius: 36px;
  padding-top: 10px;
  padding-bottom: 10px;
  display: flex;
  flex-flow: nowrap;
  justify-content: center;
  align-items: center;
  font-family: "Audiowide", cursive;
  text-shadow: 2px 2px black;
  animation-name: slidein;
  animation-duration: 0.5s;
}

@media screen and (min-width: 650px) {
  h2 {
    font-size: 42px;
    text-shadow: 4px 4px black;
  }
}

.question-text {
  height: auto;
  margin-left: auto;
  margin-right: auto;
}

h3 {
  text-align: center;
  padding: 0;
  margin: 9px;
  font-size: 15px;
  height: 56px;
  display: flex;
  flex-flow: nowrap;
  justify-content: center;
  align-items: center;
  font-family: "Permanent Marker", cursive;
}

@media screen and (min-width: 800px) {
    h3 {
        font-size: 20px;
        height: 72px;
    }
  }

.score-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
}

h4 {
  height: auto;
  width: 45%;
  font-size: 24px;
  display: flex;
  flex-flow: nowrap;
  justify-content: center;
  align-items: center;
  background-color: rgb(45, 233, 189);
  color: magenta;
  border: 6px solid red;
  border-radius: 28px;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  font-family: "Audiowide", cursive;
  text-shadow: 2px 2px black;
  animation-name: slidein;
  animation-duration: 0.5s;
}

@media screen and (min-width: 650px) {
  h4 {
    font-size: 42px;
    width: 35%;
    text-shadow: 4px 4px black;
  }
}

h6 {
  font-size: medium;
}

.button-container-top {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
  visibility: visible;
}

@media screen and (min-width: 650px) {
  .button-container-top {
    flex-direction: row;
    justify-content: center;
  }
}

.grid-container {
  display: grid;
  margin-top: 30px;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
}

@media screen and (min-width: 650px) {
  .grid-container {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

.card-title {
  width: 80%;
}

@media screen and (min-width: 650px) {
  .card-title {
    width: 80%;
  }
}

.grid-item {
  border: 1px solid black;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 10px;
  width: 80%;
  height: 400px;
  border-radius: 24px;
  font-size: 21px;
  background-color: yellow;
  color: darkblue;
  transition: all 0.6s;
  animation-name: slidein;
  animation-duration: 0.5s;
}

@media screen and (min-width: 650px) {
  .grid-item {
    width: 80%;
  }
}

.grid-item img {
  height: 270px;
  width: 85%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 0;
  border-radius: 12px;
  animation-name: slidein;
  animation-duration: 0.5s;
}

@media screen and (min-width: 650px) {
  .grid-item img {
    height: 270px;
    width: 80%;
  }
}

.grid-item:hover {
  color: darkorange;
  background-color: darkturquoise;
  border: 6px solid darkviolet;
  transform: scale(1.25);
}

.button-container-bottom {
  text-align: center;
  padding: 30px;
  margin: 10px 0 0 0;
  padding: 0;
}

.icons {
    font-size: 15px;
    margin: 10px;
}

@media screen and (min-width: 650px) {
    .icons {
        font-size: 24px;  
    }
  }

.movies,
.tv,
.books {
  height: 60px;
  width: 144px;
  border-radius: 12px;
  font-size: 24px;
  padding: 0;
  margin-right: 30px;
  margin-left: 30px;
}

button {
  height: 60px;
  width: 120px;
  border-radius: 12px;
  font-family: "Audiowide", cursive;
  font-size: 24px;
  padding: 0;
  border: 6px solid yellow;
  background-color: mediumblue;
  color: yellow;
  transition: all 0.8s;
}

.restart {
  width: 160px;
}

button:hover {
  color: chartreuse;
  background-color: coral;
  border: 6px solid yellow;
  transform: scale(1.5);
}

@keyframes spin {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateX(360deg);
  }
  from {
    transform: rotateX(0deg);
  }
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }
  to {
    margin-left: 0%;
    width: 100%;
  }
}

